--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,27 +71,27 @@ jobs:
           EOF
 
       - name: Executar análise SonarQube
-  run: |
-    ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-      sudo apt-get update && sudo apt-get install -y unzip wget openjdk-11-jre
+        run: |
+          # Instalar scanner
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          sudo apt-get update && sudo apt-get install -y unzip
 
-      wget -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-      unzip sonar-scanner.zip
-
-      cd sonar-scanner-4.8.0.2856-linux/bin
-
-      ./sonar-scanner \
-        -Dsonar.projectKey=gerenciador-tarefas \
-        -Dsonar.projectName="Gerenciador de Tarefas" \
-        -Dsonar.sources=. \
-        -Dsonar.host.url=http://localhost:9000 \
-        -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-        -Dsonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/dist/**,**/build/** \
-        -Dsonar.qualitygate.wait=true \
-        -Dsonar.qualitygate.timeout=300
-    EOF
-
-
+          wget -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+          unzip sonar-scanner.zip
+          export PATH=$PATH:$(pwd)/sonar-scanner-4.8.0.2856-linux/bin
+          
+          # Executar análise
+          sonar-scanner \
+            -Dsonar.projectKey=gerenciador-tarefas \
+            -Dsonar.projectName="Gerenciador de Tarefas" \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=http://localhost:9000 \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/dist/**,**/build/** \
+            -Dsonar.qualitygate.wait=true \
+            -Dsonar.qualitygate.timeout=300
+          EOF
+          
       - name: Limpar SonarQube
         if: always()
         run: |
