--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,16 +72,20 @@ jobs:
 
       - name: Executar análise SonarQube
         run: |
-          # Instalar scanner
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-          sudo apt-get update && sudo apt-get install -y unzip
+          # Atualizar pacotes e instalar unzip
+          sudo apt-get update
+          sudo apt-get install -y unzip wget openjdk-11-jre
 
+          
           wget -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
           unzip sonar-scanner.zip
-          export PATH=$PATH:$(pwd)/sonar-scanner-4.8.0.2856-linux/bin
+
           
-          # Executar análise
-          sonar-scanner \
+          cd sonar-scanner-4.8.0.2856-linux
+
+          
+          ./bin/sonar-scanner \
             -Dsonar.projectKey=gerenciador-tarefas \
             -Dsonar.projectName="Gerenciador de Tarefas" \
             -Dsonar.sources=. \
@@ -91,7 +95,8 @@ jobs:
             -Dsonar.qualitygate.wait=true \
             -Dsonar.qualitygate.timeout=300
           EOF
-          
+
+
       - name: Limpar SonarQube
         if: always()
         run: |
