--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,22 +76,24 @@ jobs:
       - name: Executar análise SonarQube (sem sudo)
         run: |
          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-          # Criar diretório local
-         mkdir -p \$HOME/sonar && cd \$HOME/sonar
-
-         # Baixar unzip portátil
+         # Criar diretórios
          mkdir -p \$HOME/tools
+         mkdir -p \$HOME/sonar
          cd \$HOME/tools
-         wget https://github.com/kuba--/zip/releases/download/v3.0/unzip-6.0-amd64 -O unzip
+
+         # Baixar e preparar o unzip portátil
+         wget https://raw.githubusercontent.com/pbatard/unzip-static/master/unzip-amd64 -O unzip
          chmod +x unzip
+
+         # Exportar para o PATH local
          export PATH="\$HOME/tools:\$PATH"
 
-         # Voltar ao diretório do scanner
+         # Baixar e descompactar o SonarScanner
          cd \$HOME/sonar
          wget -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
-
          \$HOME/tools/unzip -o sonar-scanner.zip
 
+         # Executar o scanner
          ./sonar-scanner-4.8.0.2856-linux/bin/sonar-scanner \
          -Dsonar.projectKey=gerenciador-tarefas \
          -Dsonar.projectName="Gerenciador de Tarefas" \
